# pteam_p2os

./: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  pteam_p2os_pal1sim.launch  pteam_p2os_pioneer.launch
msg/: Perception.msg  ProcessedLS.msg
msg_gen/cpp/include/pteam_p2os/: Perception.h  ProcessedLS.h
msg_gen/lisp/: Perception.lisp  ProcessedLS.lisp  _package.lisp  _package_Perception.lisp  _package_ProcessedLS.lisp  pteam_p2os-msg.asd
src/: behaviors_node.cpp  control_node.cpp  control_node.cpp.bak  dario_example.cpp  debug_node.cpp  main.cpp  sensing_node.cpp
src/base/: BehaviorManager.h  CBehavior.h  CConfigurable.h  Common.h  DMDebug.h  OutputMerger.h  RANSAC.h  __OutputMerger.h  gnuplot_i.hpp
src/behaviors/: CMakeLists.txt  Circle.h  CollisionAvoidance.cpp  CollisionAvoidance.h  MoveThroughwardGoal.cpp  MoveThroughwardGoal.h  StayInTheMiddle.cpp  StayInTheMiddle.h  TakeTheBall.cpp  TakeTheBall.h  TargetDetector.cpp  TargetDetector.h
src/merger/: SimpleMerger.h
src/pteam_p2os/msg/: _Perception.py  _ProcessedLS.py  __init__.py
src/pteam_p2os/srv/: _RobotControl.py
srv/: RobotControl.srv
srv_gen/cpp/include/pteam_p2os/: RobotControl.h
srv_gen/lisp/: RobotControl.lisp  _package.lisp  _package_RobotControl.lisp  pteam_p2os-srv.asd
world/: circle_field.pgm  circle_field.world  pal1.world  pal1_obstacle.world  palazzina1.pgm  palazzina1_obstacle.pgm
